k8s/services/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-identity
  labels:
    name: shopno-identity
    app.kubernetes.io/part-of: shopnoltd
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
