k8s/services/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: shopno-identity
  labels:
    app.kubernetes.io/name: keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: management
      port: 9000
      targetPort: management
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
